# rust3d

./: Cargo.toml  profile
src/: lib.rs  main.rs  math.rs  render.rs
src/render/: objects.rs  shapes.rs
