[package]
name = "rust3d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
cuda_std="12.1.1"

[build-dependencies]
cuda_builder = "12.1.1"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
